--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "*"
+        "maatwebsite/excel": "*",
+        "swiftmailer/swiftmailer": "^5.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
