--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "*",
+        "maatwebsite/excel": "^3.1",
         "swiftmailer/swiftmailer": "^5.4"
     },
     "require-dev": {
