--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,7 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
 </IfModule>
+# Adjust PHP Memory Allocation
+php_value memory_limit 1024M
